started writing introduction

--- a/Latex/bibliography.bib
+++ b/Latex/bibliography.bib
@@ -11,3 +11,793 @@
 	title = {A Dynamical Theory of the Electromagnetic Field},
 	journal = {Philosophical Transactions of the Royal Society of London}
 }
+
+@article{klepeis2001national,
+  title={The National Human Activity Pattern Survey (NHAPS): a resource for assessing exposure to environmental pollutants},
+  author={Klepeis, Neil E and Nelson, William C and Ott, Wayne R and Robinson, John P and Tsang, Andy M and Switzer, Paul and Behar, Joseph V and Hern, Stephen C and Engelmann, William H},
+  journal={Journal of Exposure Science and Environmental Epidemiology},
+  volume={11},
+  number={3},
+  pages={231},
+  year={2001},
+  publisher={Nature Publishing Group}
+}
+
+@article{IPCC,
+title = "Fifth Assessment Report, Mitigation of Climate Change",
+author="",
+journal="Intergovernmental Panel on Climate Change",
+volume="",
+pages="674-738",
+year="2014",
+}
+
+@article{raugei2007life,
+  title={Life cycle assessment and energy pay-back time of advanced photovoltaic modules: CdTe and CIS compared to poly-Si},
+  author={Raugei, Marco and Bargigli, Silvia and Ulgiati, Sergio},
+  journal={Energy},
+  volume={32},
+  number={8},
+  pages={1310--1318},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@article{raugei2009life,
+  title={Life cycle impacts and costs of photovoltaic systems: current state of the art and future outlooks},
+  author={Raugei, Marco and Frankl, Paolo},
+  journal={Energy},
+  volume={34},
+  number={3},
+  pages={392--399},
+  year={2009},
+  publisher={Elsevier}
+}
+
+
+@article{harvey2009reducing,
+  title={Reducing energy use in the buildings sector: measures, costs, and examples},
+  author={Harvey, LD Danny},
+  journal={Energy Efficiency},
+  volume={2},
+  number={2},
+  pages={139--163},
+  year={2009},
+  publisher={Springer}
+}
+
+@techreport{hartless2003application,
+  title={Application of energy performance regulations to existing buildings. Final report of the Task B4, ENPER TEBUC Project},
+  author={Hartless, R},
+  year={2003},
+  institution={SAVE 4.1031/C/00-018, Building Research Establishment, Watford UK}
+}
+
+@article{Staniaszek2014BPIE,
+title = "Renovation Strategies of Selected EU Countries",
+author="Dan Staniaszek",
+journal="BPIE",
+volume="",
+year="2014",
+}
+
+@article{Economidou2011BPIE,
+title = "Europes Buildings Under the Microscope",
+author="Marina Economidou",
+journal="BPIE",
+volume="",
+year="2011",
+}
+
+@article{Shoen1997,
+title = "",
+author="Shoen T et al.",
+journal="14th Euro Conf. Photovoltaic Solar Energy Conversion",
+volume="",
+year="1997",
+}
+
+@article{MuKen2014,
+title = "Mustervorschriften der Kantone im Energiebereich",
+author="",
+journal="Konferenz Kantonaler Energiedirektoren",
+volume="",
+year="2014",
+}
+
+
+
+@book{Bosio2010,
+title = "Thin Film Solar Cells, Current Status and Future Trends",
+author="Alesio Bosio, Alessandro Romeo",
+publisher="Nova Biomedical Books",
+year="2010",
+}
+
+@book{Hamakawa2004,
+title = "Thin Film Solar Cells, Next Generation Photovoltaics and Its Applications",
+author="Y. Hamakawa",
+publisher="Springer",
+year="2004",
+}
+
+
+@online{NREL,
+  title = {Cell Efficiency Records},
+  author={Greg Wilson},
+  journal={National Center for Photovoltaics},
+  publisher={NREL},
+  year={2015},
+  url = {http://www.nrel.gov/ncpv/},
+}
+
+@article{jelle2012building,
+  title={Building integrated photovoltaic products: A state-of-the-art review and future research opportunities},
+  author={Jelle, Bj{\o}rn Petter and Breivik, Christer and R{\o}kenes, Hilde Drolsum},
+  journal={Solar Energy Materials and Solar Cells},
+  volume={100},
+  pages={69--96},
+  year={2012},
+  publisher={Elsevier}
+}
+
+
+
+@article{rossi2012adaptive,
+  title={Adaptive distributed robotics for environmental performance, occupant comfort and architectural expression},
+  author={Rossi, Dino and Nagy, Zolt{\'a}n and Schlueter, Arno},
+  journal={International Journal of Architectural Computing},
+  volume={10},
+  number={3},
+  pages={341--360},
+  year={2012},
+  publisher={Multi Science Publishing}
+}
+
+@article{loonen2013climate,
+  title={Climate adaptive building shells: State-of-the-art and future challenges},
+  author={Loonen, RCGM and Tr{\v{c}}ka, M and C{\'o}stola, Daniel and Hensen, JLM},
+  journal={Renewable and Sustainable Energy Reviews},
+  volume={25},
+  pages={483--493},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{jayathissa2015abs,
+  title={Numerical Simulation of Energy Performance and Construction of the Adaptive Solar Facade},
+  author={Jayathissa, Prageeth and Nagy, Zoltan and Offedu, Nicola and Schlueter, Arno},
+  journal={Proceedings of the Advanced Building Skins},
+  volume={2},
+  pages={52--62},
+  year={2015},
+  publisher={TU Graz}
+  }
+
+
+@article{jayathissa2016PVSEC,
+  title={Energy Performance of {PV} Modules as Adaptive Building Shading Systems},
+  author={Jayathissa, Prageeth and Schmidli, Jeremias and Hofer, Johannes and Schlueter, Arno},
+  journal={EU PVSEC 2016},
+  year={2016},
+  publisher={PVSEC}
+  }
+
+
+
+
+@article{kaelin2004low,
+  title={Low cost processing of CIGS thin film solar cells},
+  author={Kaelin, M and Rudmann, D and Tiwari, AN},
+  journal={Solar Energy},
+  volume={77},
+  number={6},
+  pages={749--756},
+  year={2004},
+  publisher={Elsevier}
+}
+
+
+
+@article{razykov2011solar,
+  title={Solar photovoltaic electricity: current status and future prospects},
+  author={Razykov, TM and Ferekides, CS and Morel, D and Stefanakos, E and Ullal, HS and Upadhyaya, HM},
+  journal={Solar Energy},
+  volume={85},
+  number={8},
+  pages={1580--1608},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@online{loonen_pintrest,
+  author = {Loonen RCGM},
+  title = {Climate Adaptive Building Shells on Pintrest},
+  year = {2015},
+  url = {https://www.pinterest.com/CABSoverview/},
+  urldate = {}
+}
+
+@book{linn2014kinetic,
+  title={Kinetic architecture: design for active envelopes},
+  author={Linn, Charles},
+  year={2014},
+  publisher={Images Publishing}
+}
+
+@article{benemann2001building,
+  title={Building-integrated {PV} modules},
+  author={Benemann, Joachim and Chehab, Oussama and Schaar-Gabriel, Eric},
+  journal={Solar Energy Materials and Solar Cells},
+  volume={67},
+  number={1},
+  pages={345--354},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@article{lollini2010energy,
+  title={Energy efficiency of a dynamic glazing system},
+  author={Lollini, R and Danza, L and Meroni, I},
+  journal={Solar Energy},
+  volume={84},
+  number={4},
+  pages={526--537},
+  year={2010},
+  publisher={Elsevier}
+}
+
+
+
+
+@article{hammad2010energy,
+  title={The energy savings potential of using dynamic external louvers in an office building},
+  author={Hammad, Fawwaz and Abu-Hijleh, Bassam},
+  journal={Energy and Buildings},
+  volume={42},
+  number={10},
+  pages={1888--1895},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{tzempelikos2007impact,
+  title={The impact of shading design and control on building cooling and lighting demand},
+  author={Tzempelikos, Athanassios and Athienitis, Andreas K},
+  journal={Solar Energy},
+  volume={81},
+  number={3},
+  pages={369--382},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@article{nielsen2011quantifying,
+  title={Quantifying the potential of automated dynamic solar shading in office buildings through integrated simulations of energy and daylight},
+  author={Nielsen, Martin Vraa and Svendsen, Svend and Jensen, Lotte Bjerregaard},
+  journal={Solar Energy},
+  volume={85},
+  number={5},
+  pages={757--768},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{saga2010advances,
+  title={Advances in crystalline silicon solar cell technology for industrial mass production},
+  author={Saga, Tatsuo},
+  journal={npg asia materials},
+  volume={2},
+  number={3},
+  pages={96--102},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
+
+@article{kushiya2014cis,
+  title={{CIS}-based thin-film {PV} technology in solar frontier {KK}},
+  author={Kushiya, Katsumi},
+  journal={Solar Energy Materials and Solar Cells},
+  volume={122},
+  pages={309--313},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{nagy2016adaptive,
+  title={The Adaptive Solar Facade: From concept to prototypes},
+  author={Nagy, Zoltan and Svetozarevic, Bratislav and Jayathissa, Prageeth and Begle, Moritz and Hofer, Johannes and Lydon, Gearoid and Willmann, Anja and Schlueter, Arno},
+  journal={Frontiers of Architectural Research},
+  volume={5},
+  number={2},
+  pages={143--156},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{hofer2016parametric,
+  title={Parametric analysis and systems design of dynamic photovoltaic shading modules},
+  author={Hofer, Johannes and Groenewolt, Abel and Jayathissa, Prageeth and Nagy, Zoltan and Schlueter, Arno},
+  journal={Energy Science \& Engineering},
+  volume={4},
+  number={2},
+  pages={134--152},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+
+
+@article{chirilua2011highly,
+  title={Highly efficient Cu (In, Ga) Se2 solar cells grown on flexible polymer films},
+  author={Chiril{\u{a}}, Adrian and Buecheler, Stephan and Pianezzi, Fabian and Bloesch, Patrick and Gretener, Christina and Uhl, Alexander R and Fella, Carolin and Kranz, Lukas and Perrenoud, Julian and Seyrling, Sieghard and others},
+  journal={Nature materials},
+  volume={10},
+  number={11},
+  pages={857--861},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
+@article{Svetozarevic2014a,
+author = {Svetozarevic, Bratislav and Nagy, Zoltan and Rossi, Dino and Schlueter, Arno},
+journal = {Robotics: Science and Systems, Workshop on Advances on Soft Robotics},
+keywords = {Journal},
+pages = {2--6},
+title = {{Experimental Characterization of a 2-DOF Soft Robotic Platform for Architectural Applications}},
+year = {2014}
+}
+
+@online{Rhino,
+  author = {},
+  title = {Rhinoceros V5},
+  year = {2015},
+  url = {https://www.rhino3d.com/},
+  urldate = {27 Jan 2015}
+}
+
+@online{grasshopper,
+  author = {},
+  title = {Grasshopper - Algorithmic Modelling for Rhino},
+  year = {2015},
+  url = {http://www.grasshopper3d.com/},
+  urldate = {}
+}
+
+@article{energyplus,
+  title={Energy plus: energy simulation program},
+  author={Crawley, Drury B and Lawrie, Linda K and Pedersen, Curtis O and Winkelmann, Frederick C},
+  journal={ASHRAE journal},
+  volume={42},
+  number={4},
+  pages={49--56},
+  year={2000},
+  publisher={ASHRAE AMERICAN SOCIETY HEATING REFRIGERATING}
+}
+
+@online{DIVA,
+  author = {},
+  title = {DIVA for Rhino},
+  year = {},
+  url = {http://diva4rhino.com/},
+  urldate = {27 Jan 2015}
+}
+
+@online{python,
+  author = {},
+  title = {Python},
+  year = {},
+  url = {https://www.python.org/},
+  urldate = {27Jan 2017}
+}
+
+@online{karamba,
+  author = {},
+  title = {karamba 3d},
+  year = {},
+  url = {http://www.karamba3d.com/},
+  urldate = {27Jan 2017}
+}
+
+@online{numpy,
+  author = {},
+  title = {NumPy},
+  year = {},
+  url = {http://www.numpy.org/},
+  urldate = {27 Jan 2017}
+}
+
+@online{pandas,
+  author = {},
+  title = {pandas},
+  year = {},
+  url = {http://pandas.pydata.org/},
+  urldate = {9 Oct 2015}
+}
+
+@online{MATLAB,
+  author = {},
+  title = {MATLAB 2014b, The MathWorks, Inc., Natick, Massachusetts, United States.},
+  year = {},
+  url = {}
+}
+
+
+
+@inproceedings{roudsari2013ladybug,
+  title={Ladybug: a parametric environmental plugin for grasshopper to help designers create an environmentally-conscious design},
+  author={Roudsari, Mostapha Sadeghipour and Pak, Michelle and Smith, Adrian},
+  booktitle={Proceedings of the 13th International IBPSA Conference Held in Lyon, France Aug},
+  year={2013}
+}
+
+
+@article{defaix2012technical,
+  title={Technical potential for photovoltaics on buildings in the EU-27},
+  author={Defaix, PR and van Sark, WGJHM and Worrell, E and de Visser, Erika},
+  journal={Solar Energy},
+  volume={86},
+  number={9},
+  pages={2644--2653},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@book{solomon2007climate,
+  title={Climate change 2007-the physical science basis: Working group I contribution to the fourth assessment report of the IPCC},
+  author={Solomon, Susan},
+  volume={4},
+  year={2007},
+  publisher={Cambridge University Press}
+}
+
+
+@article{mandalaki2014assessment,
+  title={Assessment of energy production from photovoltaic modules integrated in typical shading devices},
+  author={Mandalaki, M and Papantoniou, S and Tsoutsos, T},
+  journal={Sustainable Cities and Society},
+  volume={10},
+  pages={222--231},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{mandalaki2012assessment,
+  title={Assessment of fixed shading devices with integrated {PV} for efficient energy use},
+  author={Mandalaki, M and Zervas, K and Tsoutsos, T and Vazakas, A},
+  journal={Solar Energy},
+  volume={86},
+  number={9},
+  pages={2561--2575},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{yoo2011available,
+  title={Available remodelling simulation for a {BIPV} as a shading device},
+  author={Yoo, Seung-Ho and Manz, Heinrich},
+  journal={Solar Energy Materials and Solar Cells},
+  volume={95},
+  number={1},
+  pages={394--397},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{freitas2015maximizing,
+  title={Maximizing the Solar Photovoltaic Yield in Different Building Facade Layouts},
+  author={Sara, Freitas and et al},
+  journal={EU PVSEC (2015)},
+  year={2015},
+}
+
+@online{genevaweatherfile,
+  author = {EnergyPlus},
+  title = {Geneva Weather File},
+  year = {},
+  url = {http://bit.ly/1PXIYJM},
+  urldate = {},
+}
+
+@article{hofer2015PVSEC,
+ title={Parametric analysis and systems design of dynamic photovoltaic shading modules},
+ author={Hofer, Johannes and Groenewolt, Abel and Jayathissa, Prageeth and Nagy, Zoltan and Schlueter, Arno},
+ journal={EU PVSEC 2015, Hamburg, Germany},
+ volume={},
+ number={},
+ pages={},
+ year={},
+ doi = {},
+ publisher={}
+}
+
+@inproceedings{ward1994radiance,
+  title={The RADIANCE lighting simulation and rendering system},
+  author={Ward, Gregory J},
+  booktitle={Proceedings of the 21st annual conference on Computer graphics and interactive techniques},
+  pages={459--472},
+  year={1994},
+  organization={ACM}
+}
+
+@article{harb2016development,
+  title={Development and validation of grey-box models for forecasting the thermal response of occupied buildings},
+  author={Harb, Hassan and Boyanov, Neven and Hernandez, Luis and Streblow, Rita and M{\"u}ller, Dirk},
+  journal={Energy and Buildings},
+  volume={117},
+  pages={199--207},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{bacher2011identifying,
+  title={Identifying suitable models for the heat dynamics of buildings},
+  author={Bacher, Peder and Madsen, Henrik},
+  journal={Energy and Buildings},
+  volume={43},
+  number={7},
+  pages={1511--1522},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{madsen1995estimation,
+  title={Estimation of continuous-time models for the heat dynamics of a building},
+  author={Madsen, Henrik and Holst, Jan},
+  journal={Energy and Buildings},
+  volume={22},
+  number={1},
+  pages={67--79},
+  year={1995},
+  publisher={Elsevier}
+}
+
+@article{sonderegger2010diagnostic,
+  title={Diagnostic tests determining the thermal response of a house},
+  author={Sonderegger, Robert},
+  journal={Lawrence Berkeley National Laboratory},
+  year={2010}
+}
+
+@InBook{mermoud2010,
+  author    = {Mermoud,Andr\'e and Lejeune,Thibault},
+  title     = {Performance assessment of a simulation model for {PV} modules of any available technology},
+  language  = {eng},
+  series   = {EU PVSEC 2010},
+  isbn      = {3936338264},
+  address   = {Munich},
+  keywords  = {Modelling; Performance; Thin film},
+}
+
+@inproceedings{crank1947practical,
+  title={A practical method for numerical evaluation of solutions of partial differential equations of the heat-conduction type},
+  author={Crank, John and Nicolson, Phyllis},
+  booktitle={Mathematical Proceedings of the Cambridge Philosophical Society},
+  volume={43},
+  number={01},
+  pages={50--67},
+  year={1947},
+  organization={Cambridge Univ Press}
+}
+
+@book{de2008iso,
+  title={EN ISO 13790: Energy Performance of Buildings: Calculation of Energy Use for Space Heating and Cooling (ISO 13790: 2008).},
+  author={},
+  year={2008},
+  publisher={CEN}
+}
+
+@article{sun2012optimum,
+  title={Optimum design of shading-type building-integrated photovoltaic claddings with different surface azimuth angles},
+  author={Sun, Liangliang and Lu, Lin and Yang, Hongxing},
+  journal={Applied Energy},
+  volume={90},
+  number={1},
+  pages={233--240},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@book{szokolay1980handbook,
+  title={Environmental Science Handbook},
+  author={S V Szokolay},
+  year={1980},
+  publisher={The Construction Press}
+}
+
+@book{remund1997meteonorm,
+  title={METEONORM: Global meteorological database for solar energy and applied climatology},
+  author={Remund, Jan and Kunz, Stefan},
+  year={1997},
+  publisher={Meteotest}
+}
+
+@article{palmero2010effect,
+  title={Effect of louver shading devices on building energy requirements},
+  author={Palmero-Marrero, Ana I and Oliveira, Armando C},
+  journal={Applied Energy},
+  volume={87},
+  number={6},
+  pages={2040--2049},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{nielsen2011quantifying,
+  title={Quantifying the potential of automated dynamic solar shading in office buildings through integrated simulations of energy and daylight},
+  author={Nielsen, Martin Vraa and Svendsen, Svend and Jensen, Lotte Bjerregaard},
+  journal={Solar Energy},
+  volume={85},
+  number={5},
+  pages={757--768},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{bellia2014overview,
+  title={An overview on solar shading systems for buildings},
+  author={Bellia, Laura and Marino, Concetta and Minichiello, Francesco and Pedace, Alessia},
+  journal={Energy Procedia},
+  volume={62},
+  pages={309--317},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@inproceedings{svetozarevic2016soro,
+  title={SoRo-Track: A two-axis soft robotic platform for solar tracking and building-integrated photovoltaic applications},
+  author={Svetozarevic, Bratislav and Nagy, Zolt{\'a}n and Hofer, Johannes and Jacob, Dominic and Begle, Moritz and Chatzi, Eleni and Schlueter, Arno},
+  booktitle={Robotics and Automation (ICRA), 2016 IEEE International Conference on},
+  pages={4945--4950},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{robinson2004irradiation,
+  title={Irradiation modelling made simple: the cumulative sky approach and its applications},
+  author={Robinson, Darren and Stone, Andrew},
+  booktitle={PLEA conference},
+  pages={19--22},
+  year={2004}
+}
+
+@article{perez1993all,
+  title={All-weather model for sky luminance distribution preliminary configuration and validation},
+  author={Perez, Richard and Seals, Robert and Michalsky, Joseph},
+  journal={Solar energy},
+  volume={50},
+  number={3},
+  pages={235--245},
+  year={1993},
+  publisher={Elsevier}
+}
+
+@inproceedings{ibarra2011solar,
+  title={Solar availability a comparison study of six irradiation distribution methods},
+  author={Ibarra, Diego and Reinhart, Christoph F},
+  booktitle={Proceedings of Building Simulation},
+  pages={2627--2634},
+  year={2011}
+}
+
+@article{tregenza1987subdivision,
+  title={Subdivision of the sky hemisphere for luminance measurements},
+  author={Tregenza, PR},
+  journal={Lighting Research and Technology},
+  volume={19},
+  number={1},
+  pages={13--14},
+  year={1987},
+  publisher={SAGE Publications}
+}
+
+@article{jayathissa2017optimising,
+  title={Optimising building net energy demand with dynamic BIPV shading},
+  author={Jayathissa, P and Luzzatto, M and Schmidli, J and Hofer, J and Nagy, Z and Schlueter, A},
+  journal={Applied Energy},
+  volume={202},
+  pages={726--735},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@book{oborn2012bahr,
+  title={Al Bahr Towers: The Abu Dhabi Investment Council Headquarters},
+  author={Oborn, Peter},
+  year={2012},
+  publisher={John Wiley \& Sons}
+}
+
+@article{schlueter2009building,
+  title={Building information model based energy / exergy performance assessment in early design stages},
+  author={Schlueter, Arno and Thesseling, Frank},
+  journal={Automation in construction},
+  volume={18},
+  number={2},
+  pages={153--163},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{volk2014building,
+  title={Building Information Modeling (BIM) for existing buildings Literature review and future needs},
+  author={Volk, Rebekka and Stengel, Julian and Schultmann, Frank},
+  journal={Automation in construction},
+  volume={38},
+  pages={109--127},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{oxman2008performance,
+  title={Performance-based design: current practices and research issues},
+  author={Oxman, Rivka},
+  journal={International journal of architectural computing},
+  volume={6},
+  number={1},
+  pages={1--17},
+  year={2008},
+  publisher={SAGE Publications Sage UK London, England}
+}
+
+@article{Rippmann2012,
+    author  = "Rippmann, M. and Lachauer, L. and Block, P.",
+    title   = "Interactive Vault Design",
+    journal = "International Journal of Space Structures",
+    year    = "2012",
+    volume  = "27",
+    number  = "4",
+    pages   = "219-230",
+    month   = "December",
+    doi     = "10.1260/0266-3511.27.4.219",
+    note    = "",
+}
+
+@article{Block2017,
+    author  = "Block, P. and Schlueter, A. and Veenendaal, D. and Bakker, J. and Begle, M. and Hofer, J. and Jayathissa, P. and Lydon, G.P. and Maxwell, I. and Mendez Echenagucia, T. and Nagy, Z. and Pigram, D. and Svetozarevic, B, and Torsing, R. and Verbeek, J. and Willmann, A.",
+    title   = "NEST HiLo: Research \& innovation unit for lightweight construction and building systems integration",
+    journal = "Journal of Building Engineering",
+    year    = "2017",
+    volume  = "",
+    number  = "",
+    pages   = "",
+    month   = "",
+    doi     = "",
+    note    = "under review",
+}
+
+@article{lydon2017coupling,
+  title={Coupling energy systems with lightweight structures for a net plus energy building},
+  author={Lydon, GP and Hofer, J and Svetozarevic, B and Nagy, Z and Schlueter, A},
+  journal={Applied Energy},
+  volume={189},
+  pages={310--326},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@online{ASFGitHub,
+  title = {{ASF} Simulation Framework},
+  author={Jayathissa, Prageeth and Luzzatto, Mauro and Schmidli, Jeremias},
+  journal={GitHub},
+  publisher={},
+  year={2017},
+  url = {https://github.com/architecture-building-systems/ASF\_Simulation},
+}
+
+@online{RCGitHub,
+  title = {{RC} Building Simulator},
+  author={Jayathissa, Prageeth},
+  journal={GitHub},
+  publisher={},
+  year={2017},
+  url = {https://github.com/architecture-building-systems/RC\_BuildingSimulator},
+}
+
+@article{Svetozarevic2017a,
+author = {Svetozarevic, Bratislav and Schlueter, Arno and Hischier, Illias and Begle, Moritz and Jayathissa, Prageeth and Caranovic, Stefan and Shepherd, Robert and Nagy, Zoltan and Hofer, Johannes},
+journal = {In Submission},
+keywords = {Journal},
+title = {{Soft robotics driven dynamic building envelope for energy and comfort management}},
+year = {2017}
+}
