--- a/Latex/frontbackmatter/contents.tex
+++ b/Latex/frontbackmatter/contents.tex
@@ -80,7 +80,7 @@
 $c$ & speed of light in vacuum, $c=\u{299792458}{\metre\per\second}$ \\
     \end{tabularx}
     \begin{flushright}
-    (CODATA 2014~\cite{codata})
+    (CODATA 2014 \cite{codata})
     \end{flushright}
     \sisetup{separate-uncertainty=true}
 \endgroup
