--- a/Latex/preamble/biblatex.tex
+++ b/Latex/preamble/biblatex.tex
@@ -25,20 +25,20 @@
   %
   sortcase=true,
   sortlos=los, % (bib, los) The sorting order of the list of shorthands
-  sortcites=true, % do/do not sort citations according to bib	
+  sortcites=true, % do/do not sort citations according to bib 
   %--- Dates --- --- ---
   date=comp,  % (short, long, terse, comp, iso8601)
-  %	origdate=
-  %	eventdate=
-  %	urldate=
-  %	alldates=
+  % origdate=
+  % eventdate=
+  % urldate=
+  % alldates=
   datezeros=true, %
   dateabbrev=true, %
   %--- General Options --- --- ---
   maxnames=3,
   minnames=1,
   maxbibnames=100, % do not abbreviate names in bibliography
-  %	autocite= % (plain, inline, footnote, superscript) 
+  % autocite= % (plain, inline, footnote, superscript) 
   autopunct=true,
   language=auto,
   babel=none, % (none, hyphen, other, other*)
@@ -48,7 +48,7 @@
   backref=false,
   backrefstyle=three, % (none, three, two, two+, three+, all+)
   backrefsetstyle=setonly, %
-  indexing=true, % 
+  indexing=false, % 
   % options:
   % true       Enable indexing globally.
   % false      Disable indexing globally.
@@ -57,16 +57,16 @@
   refsection=none, % (part, chapter, section, subsection)
   refsegment=none, % (none, part, chapter, section, subsection)
   abbreviate=true, % (true, false)
-  defernumbers=true, % 
+  defernumbers=false, % 
   punctfont=false, % 
-  arxiv=abs, % (ps, pdf, format)	
-  %--- Style Options --- --- ---	
+  arxiv=abs, % (ps, pdf, format)  
+  %--- Style Options --- --- ---  
   % The following options are provided by the standard styles
   isbn=false,%
   url=false,%
   doi=false,%
-  eprint=false,%	
-}%	
+  eprint=false,%  
+}%  
 
 % Suppress all date fields except the year
 \AtEveryBibitem{%
