draft sent to arno and zoltan

--- a/Latex/bibliography.bib
+++ b/Latex/bibliography.bib
@@ -215,7 +215,6 @@ year="2004",
   title = {Climate Adaptive Building Shells on Pintrest},
   year = {2015},
   url = {https://www.pinterest.com/CABSoverview/},
-  urldate = {}
 }
 
 @book{linn2014kinetic,
@@ -379,7 +378,7 @@ year = {2014}
   title = {DIVA for Rhino},
   year = {},
   url = {http://diva4rhino.com/},
-  urldate = {27 Jan 2015}
+  urldate = {2015-01-27}
 }
 
 @online{python,
@@ -991,7 +990,6 @@ year = {2017}
   title = {Archetype Properties from the CEA Toolbox},
   year = {2017},
   url = {https://github.com/architecture-building-systems/CEAforArcGIS/tree/master/cea/databases/CH/Archetypes},
-  urldate = {}
 }
 
 @online{koppenZurich,
@@ -999,7 +997,6 @@ year = {2017}
   title = {Zurich Classification},
   year = {},
   url = {https://en.climate-data.org/region/1174/},
-  urldate = {}
 }
 
 @article{de2013energy,
