--- a/Latex/frontbackmatter/contents.tex
+++ b/Latex/frontbackmatter/contents.tex
@@ -99,6 +99,7 @@
     \begin{tabularx}{\textwidth}{lX}
         ASF & Adaptive Solar Facade \\
         PDE & Performative Design Environment \\
+        BIM & Building Information Modelling \\
         FEA & Finite Element Analysis \\
         BIPV & Building Integrated Photovoltaic \\
         PV & Photovoltaic \\
