--- a/Latex/frontbackmatter/titlepage.tex
+++ b/Latex/frontbackmatter/titlepage.tex
@@ -38,7 +38,7 @@
             presented by\\
             \vspace{0.5em}
             \spacedlowsmallcaps{\myName}\\
-            Dipl., Eidgenössisches Polytechnikum \\
+            Msc., ETH Zurich \\
             \vspace{0.5em}
             born on 27 September 1988\\
             citizen of New Zealand
