--- a/Latex/ownpubs.bib
+++ b/Latex/ownpubs.bib
@@ -33,8 +33,8 @@
 @inproceedings{jayathissa2016archetpye:6,
   title={Sensitivity of Building Properties and Use Types for the Application of Adaptive Photovoltaic Shading Systems},
   author={Jayathissa, Prageeth and Zarb, Justin and Hofer, Johannes and Schlueter, Arno},
-  journal={Proceedings to CISBAT 2017},
-  year={2016},
+  journal={Energy Procedia, Proceedings to CISBAT},
+  year={2017},
   publisher={Energy Procedia}
   }
 
