--- a/Latex/thesis.tex
+++ b/Latex/thesis.tex
@@ -14,6 +14,8 @@
 \input{preamble/general}
 \usepackage[final]{pdfpages}
 
+\usepackage{lscape}
+
 % Bibliography
 \addbibresource[label=ownpubs]{ownpubs.bib}
 \addbibresource{bibliography.bib}
