added german summary

--- a/Latex/frontbackmatter/abstract.tex
+++ b/Latex/frontbackmatter/abstract.tex
@@ -25,7 +25,18 @@ Adaptive photovoltaic envelopes have the potential to improve building energy pe
 \pdfbookmark[1]{Zusammenfassung}{Zusammenfassung}
 \chapter*{Zusammenfassung}
 
-Deutsche Zusammenfassung hier.
+Adaptive Geb{\"a}udeh{\"u}llen mit integrierter Photovoltaik haben das Potential den Energiehaushalt eines Geb{\"a}udes positiv zu beeinflussen, indem die nat{\"u}rliche Lichtf{\"u}hrung und solaren W{\"a}rmegewinne gesteuert werden, w{\"a}hrend gleichzeitig Strom bedarfsgerecht produziert wird.
+In dieser Arbeit wird das Potential von adaptiven Geb{\"a}udeh{\"u}llen mit integrierter Photovoltaik vom Entwurfsprozess bis zur Evaluation analysiert.
+Zuerst wird eine Entwicklungsumgebung pr{\"a}sentiert, welche verschiedene technische Disziplinen zusammenf{\"u}hrt um einen automatisierten Arbeitsablauf zu erzielen.
+Die Entwicklungsumgebung entwirft die Form der Fassade, gibt Feedback bez{\"u}glich der strukturellen Festigkeit, analysiert die Energieprofil der Innenr{\"a}ume, f{\"u}hrt eine Tageslichtanalyse durch, rendert Bilder und produziert Fertigungspl{\"a}ne f{\"u}r einen schnellen Entwurfsprozess.
+Mit dieser Methodik konnte eine adaptive Fassade mit integrierter Photovoltaik, auch bekannt als Adaptive Solare Fassade, erfolgreich entworfen und fabriziert werden.
+Zur Regelung der adaptiven Geb{\"a}udeh{\"u}lle wird ein modellgest{\"u}tzter pr{\"a}diktiver Regelalgorithmus benutzt, welcher die Stromproduktion und den Energiebedarfs f{\"u}r alle m{\"o}glichen Konfigurationen der Anstellwinkel der Panele simuliert.
+Die Konfiguration der Anstellwinkel, welche den Energiebedarf des Geb{\"a}udes minimiert, gen{\"u}gend Tageslicht zul{\"a}sst und die Stromproduktion maximiert, wird gew{\"a}hlt.
+Diese Regelstrategie kann auch rechnerisch {\"u}ber ein ganzes Jahr ausgewertet werden. Resultate zeigen, dass ein adaptives System 20\% - 80\% Energieeinsparungen erbringen kann im Vergleich mit einem {\"a}quivalenten statischen System.
+Die grosse Spannweite der Energieeinsparungen ist auf die Sensitivit{\"a}t bez{\"u}glich der Geb{\"a}udetypen zur{\"u}ckzuf{\"u}hren.
+Die Anwendung dieser Evaluation auf elf verschiedene Geb{\"a}udenutzungstypen aus sechs verschiedenen Bauperioden zeigt, dass moderne Verwaltungsgeb{\"a}ude, Schulen und Verkaufsgeb{\"a}ude ideale Anwendungsszenarien sind.
+Adaptive Geb{\"a}udeh{\"u}llen funktionieren am besten, wenn ein Mix aus Heiz- und K{\"u}hlbedarf der Geb{\"a}udefl{\"a}chen besteht.
+Eine Lebenszyklusanalyse der adaptiven solaren Fassade zeigt, dass diese konkurrenzf{\"a}hig zu herk{\"o}mmlichen integrierten Photovoltaiksystemen ist.
 
 \end{otherlanguage}
 
