--- a/Latex/thesis.tex
+++ b/Latex/thesis.tex
@@ -44,6 +44,7 @@
 \include{frontbackmatter/titlepage}
 \include{frontbackmatter/titleback}
 \cleardoublepage\include{frontbackmatter/dedication}
+\cleardoublepage\include{frontbackmatter/preface}
 \cleardoublepage\include{frontbackmatter/abstract}
 \cleardoublepage\include{frontbackmatter/acknowledgments}
 \pagestyle{scrheadings}
