--- a/Latex/frontbackmatter/abstract.tex
+++ b/Latex/frontbackmatter/abstract.tex
@@ -10,7 +10,7 @@
 
 \chapter*{Abstract}
 
-Adaptive photovoltaic envelopes have the potential to improve building energy performance by controlling natural lighting and solar heat gains, while simultaneously generating electricity to match the building demand. This study analyses the potential of adaptive photovoltaic envelopes, from the design process to its evaluation. The study first presents a performative design environment that combines multiple technological branches into a single automated workflow. The environment designs the form of the facade, provides feedback on it's structural strength, analyses the energetic performance of the interior space, conducts a daylighting analysis, renders images and produces fabrication plans for a rapid design process. Through this methodology an adaptive photovoltaic envelope known as the Adaptive Solar Facade was successfully designed and constructed. The control strategy for the adaptive envelope is built using a model predictive control algorithm which runs successive simulations of the electricity production and building energy demand for all possible angle configurations of the panels. Angle configurations that result in minimum building energy demand, sufficient daylighting, and maximum electricity production are chosen. This control strategy can also be numerically evaluated over a year and results show that an adaptive system can have a 20\% - 80\% energy saving over an equivalent static system. The large range is due to the sensitivity of the building type. Running this numerical evaluation over eleven building use types spanning six construction periods show that modern offices, schools, and retail stores are ideal application cases. The adaptive envelopes ultimately perform best when there is a mix of both heating and cooling demands in the building space. A CO$_2$ life cycle analysis of the adaptive solar facade shows that it is favourably competitive to traditional building integrated photovoltaic systems.
+Adaptive photovoltaic envelopes have the potential to improve building energy performance by controlling natural lighting and solar heat gains, while simultaneously generating electricity to match the building demand. This study analyses the potential of adaptive photovoltaic envelopes, from the design process to its evaluation. The study first presents a performative design environment that combines multiple technological branches into a single automated workflow. The environment designs the form of the facade, provides feedback on its structural strength, analyses the energetic performance of the interior space, conducts a daylighting analysis, renders images and produces fabrication plans for a rapid design process. Through this methodology an adaptive photovoltaic envelope known as the Adaptive Solar Facade was successfully designed and constructed. The control strategy for the adaptive envelope is built using a model predictive control algorithm which runs successive simulations of the electricity production and building energy demand for all possible angle configurations of the panels. Angle configurations that result in minimum building energy demand, sufficient daylighting, and maximum electricity production are chosen. This control strategy can also be numerically evaluated over a year and results show that an adaptive system can have a 20\% - 80\% energy saving over an equivalent static system. The large range is due to the sensitivity of the building type. Running this numerical evaluation over eleven building use types spanning six construction periods show that modern offices, schools, and retail stores are ideal application cases. The adaptive envelopes ultimately perform best when there is a mix of both heating and cooling demands in the building space. A CO$_2$ life cycle analysis of the adaptive solar facade shows that it is favourably competitive to traditional building integrated photovoltaic systems.
 
 \endgroup
 
