--- a/Latex/ownpubs.bib
+++ b/Latex/ownpubs.bib
@@ -3,7 +3,7 @@
 @article{jayathissa2016parametric:1,
   title={Parametric Design Environment for Kinetic Photovoltaic Architecture},
   author={Jayathissa, P and Caranovic, S and Hofer, J and Nagy, Z and Schlueter, A},
-  journal={In Production},
+  journal={In Review},
   volume={},
   pages={},
   year={2017},
