--- a/Latex/preamble/meta.tex
+++ b/Latex/preamble/meta.tex
@@ -8,14 +8,14 @@
   Design and Assessment of Adaptive Photovoltaic Envelopes\xspace%
 }
 
-\newcommand{\myDissNumber}{?}
+\newcommand{\myDissNumber}{24750}
 \newcommand{\myName}{Prageeth Jayathissa\xspace}
 \newcommand{\myUni}{\protect{ETH Z\"urich}\xspace}
 \newcommand{\myLocation}{Z\"urich\xspace}
 \newcommand{\myTime}{2017\xspace}
 
 % DOI
-\newcommand{\myDOI}{10.3929/ethz-a-}
+\newcommand{\myDOI}{-}
 
 % Work version info
 \newcommand{\worktodo}[1]{\textcolor{red}{\textbf{TODO}: #1}}
