modified introduction and cross referenced chapters

--- a/Latex/frontbackmatter/preface.tex
+++ b/Latex/frontbackmatter/preface.tex
@@ -10,7 +10,7 @@ I have created a machine. A mechanical facade that breathes dynamic life to a bu
 
 The thoughts of the machine can at times be confusing. I have started at its outputs for hours, trying to contemplate the purpose of its motions, only later to understand the ingenuity behind its decisions. But this facade still only has the mind of an infant. An infant that has been born with a basic understanding of building thermodynamics, solar radiation, human comfort and photovoltaics. And with the programmed knowledge it can think for the whole building and use what range of motion it has, to fulfil its goal: Minimise building energy consumption while maximising human comfort.
 
-What is presented in this thesis is merely the humble beginnings of what is to come. Over the next years it will make mistakes and learn from them, it will start interacting with people and learn from their behaviour. It will start connecting to other devices, both locally in the building, and over the internet. It will continue to grow, at which point, it will be nearly impossible to understand what the purpose of its motions even mean. We, as simple humans, will forfeit the control of our homes, to the superior intellect of the machines that we have created.
+What is presented in this thesis is merely the humble beginnings of what is to come. Over the next years it will make mistakes and learn from them, it will start interacting with people and learn from their behaviour. It will start connecting to other devices, both locally in the building, and over the internet. It will continue to grow, at which point, it will be nearly impossible to understand what the purpose of its motions even mean. We, as simple humans, will forfeit the control of our homes to the superior intellect of the machines that we have created.
 
 \endgroup
 
