--- a/Latex/thesis.tex
+++ b/Latex/thesis.tex
@@ -33,7 +33,7 @@
 %
 % Uncomment and adapt these lines if you want to include a cover PDF.
 %
-% \includepdf[pages={1,{}}]{cover/crop/cover_front.pdf}
+\includepdf[pages={1,{}}]{cover/crop/cover_front.pdf}
 \cleardoublepage\setcounter{page}{1}
 
 %
