minor changes and doi

--- a/Latex/preamble/meta.tex
+++ b/Latex/preamble/meta.tex
@@ -15,7 +15,7 @@
 \newcommand{\myTime}{2017\xspace}
 
 % DOI
-\newcommand{\myDOI}{-}
+\newcommand{\myDOI}{10.3929/ethz-b-000212017}
 
 % Work version info
 \newcommand{\worktodo}[1]{\textcolor{red}{\textbf{TODO}: #1}}
